--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12270,13 +12270,12 @@ h5,
   left: 0;
   right: 0;
   background: #0d1128;
-  background: -moz-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
+  background: -moz-linear-gradient(45deg, #0d1128 0%, #000000 100%);
   background: -webkit-gradient(left bottom, right top, color-stop(0%, #0d1128), color-stop(100%, #fd6100));
-  background: -webkit-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
-  background: -o-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
-  background: -ms-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
-  background: linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0d1128', endColorstr='#fd6100', GradientType=1);
+  background: -webkit-linear-gradient(45deg, #0d1128 0%, #000000 100%);
+  background: -o-linear-gradient(45deg, #0d1128 0%, #000000 100%);
+  background: -ms-linear-gradient(45deg, #0d1128 0%, #000000 100%);
+  background: linear-gradient(45deg, #0d1128 0%, #000000 100%);background: radial-gradient(circle at 85.4% 50.8%, rgb(14, 72, 222) 0%, rgb(3, 22, 65) 74.2%);  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0d1128', endColorstr='#fd6100', GradientType=1);
   opacity: .5;
 }
 
@@ -13592,7 +13591,7 @@ textarea.form-control {
   right: 0;
   content: '';
   z-index: -1;
-  opacity: .8;
+  /* opacity: .8; */
   background: #0d1128;
   background: #0d1128;
   background: -moz-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
@@ -13600,7 +13599,7 @@ textarea.form-control {
   background: -webkit-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
   background: -o-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
   background: -ms-linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
-  background: linear-gradient(45deg, #0d1128 0%, #fd6100 100%);
+  background: radial-gradient(circle at 85.4% 50.8%, #04042B 0%, #031641 74.2%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0d1128', endColorstr='#fd6100', GradientType=1);
 }
 
