phone-call completed

--- a/src/core-component/custom-styles.css
+++ b/src/core-component/custom-styles.css
@@ -17,3 +17,13 @@
 .image-border {
   border-radius: 40px;
 }
+
+.call-link {
+  color: #000000b3;
+
+}
+
+.call-link:hover {
+  color: #000000b3;
+
+}
