--- a/src/core-component/custom-styles.css
+++ b/src/core-component/custom-styles.css
@@ -27,3 +27,15 @@
   color: #000000b3;
 
 }
+
+.contact-main {
+   display: flex;
+   gap:40px;
+   margin-bottom: 40px;
+}
+
+@media (max-width: 500px){
+  .contact-main {
+    flex-direction: column;
+  }
+}
